Update for meeting

--- a/test_image.ipynb
+++ b/test_image.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -71,57 +71,7 @@
       "---------- Networks initialized -------------\n",
       "[Network G] Total number of parameters : 11.378 M\n",
       "-----------------------------------------------\n",
-      "model [TestModel] was created\n",
-      "0000: process image... ['datasets/horse2zebra/testA/n02381460_1000.jpg']\n",
-      "0001: process image... ['datasets/horse2zebra/testA/n02381460_1010.jpg']\n",
-      "0002: process image... ['datasets/horse2zebra/testA/n02381460_1030.jpg']\n",
-      "0003: process image... ['datasets/horse2zebra/testA/n02381460_1090.jpg']\n",
-      "0004: process image... ['datasets/horse2zebra/testA/n02381460_1100.jpg']\n",
-      "0005: process image... ['datasets/horse2zebra/testA/n02381460_1110.jpg']\n",
-      "0006: process image... ['datasets/horse2zebra/testA/n02381460_1120.jpg']\n",
-      "0007: process image... ['datasets/horse2zebra/testA/n02381460_1160.jpg']\n",
-      "0008: process image... ['datasets/horse2zebra/testA/n02381460_120.jpg']\n",
-      "0009: process image... ['datasets/horse2zebra/testA/n02381460_1210.jpg']\n",
-      "0010: process image... ['datasets/horse2zebra/testA/n02381460_1260.jpg']\n",
-      "0011: process image... ['datasets/horse2zebra/testA/n02381460_1300.jpg']\n",
-      "0012: process image... ['datasets/horse2zebra/testA/n02381460_1350.jpg']\n",
-      "0013: process image... ['datasets/horse2zebra/testA/n02381460_1360.jpg']\n",
-      "0014: process image... ['datasets/horse2zebra/testA/n02381460_140.jpg']\n",
-      "0015: process image... ['datasets/horse2zebra/testA/n02381460_1420.jpg']\n",
-      "0016: process image... ['datasets/horse2zebra/testA/n02381460_1540.jpg']\n",
-      "0017: process image... ['datasets/horse2zebra/testA/n02381460_1620.jpg']\n",
-      "0018: process image... ['datasets/horse2zebra/testA/n02381460_1630.jpg']\n",
-      "0019: process image... ['datasets/horse2zebra/testA/n02381460_1660.jpg']\n",
-      "0020: process image... ['datasets/horse2zebra/testA/n02381460_1690.jpg']\n",
-      "0021: process image... ['datasets/horse2zebra/testA/n02381460_1740.jpg']\n",
-      "0022: process image... ['datasets/horse2zebra/testA/n02381460_1750.jpg']\n",
-      "0023: process image... ['datasets/horse2zebra/testA/n02381460_180.jpg']\n",
-      "0024: process image... ['datasets/horse2zebra/testA/n02381460_1820.jpg']\n",
-      "0025: process image... ['datasets/horse2zebra/testA/n02381460_1830.jpg']\n",
-      "0026: process image... ['datasets/horse2zebra/testA/n02381460_1870.jpg']\n",
-      "0027: process image... ['datasets/horse2zebra/testA/n02381460_1920.jpg']\n",
-      "0028: process image... ['datasets/horse2zebra/testA/n02381460_20.jpg']\n",
-      "0029: process image... ['datasets/horse2zebra/testA/n02381460_200.jpg']\n",
-      "0030: process image... ['datasets/horse2zebra/testA/n02381460_2050.jpg']\n",
-      "0031: process image... ['datasets/horse2zebra/testA/n02381460_2100.jpg']\n",
-      "0032: process image... ['datasets/horse2zebra/testA/n02381460_2120.jpg']\n",
-      "0033: process image... ['datasets/horse2zebra/testA/n02381460_2150.jpg']\n",
-      "0034: process image... ['datasets/horse2zebra/testA/n02381460_2280.jpg']\n",
-      "0035: process image... ['datasets/horse2zebra/testA/n02381460_2460.jpg']\n",
-      "0036: process image... ['datasets/horse2zebra/testA/n02381460_2540.jpg']\n",
-      "0037: process image... ['datasets/horse2zebra/testA/n02381460_2580.jpg']\n",
-      "0038: process image... ['datasets/horse2zebra/testA/n02381460_2650.jpg']\n",
-      "0039: process image... ['datasets/horse2zebra/testA/n02381460_2710.jpg']\n",
-      "0040: process image... ['datasets/horse2zebra/testA/n02381460_2870.jpg']\n",
-      "0041: process image... ['datasets/horse2zebra/testA/n02381460_2890.jpg']\n",
-      "0042: process image... ['datasets/horse2zebra/testA/n02381460_2940.jpg']\n",
-      "0043: process image... ['datasets/horse2zebra/testA/n02381460_2950.jpg']\n",
-      "0044: process image... ['datasets/horse2zebra/testA/n02381460_3010.jpg']\n",
-      "0045: process image... ['datasets/horse2zebra/testA/n02381460_3040.jpg']\n",
-      "0046: process image... ['datasets/horse2zebra/testA/n02381460_3110.jpg']\n",
-      "0047: process image... ['datasets/horse2zebra/testA/n02381460_3120.jpg']\n",
-      "0048: process image... ['datasets/horse2zebra/testA/n02381460_3240.jpg']\n",
-      "0049: process image... ['datasets/horse2zebra/testA/n02381460_3330.jpg']\n"
+      "model [TestModel] was created\n"
      ]
     }
    ],
@@ -146,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +117,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-1c830259db70>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mnew_key\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'module.up'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0mnew_key\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m'.'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m             \u001b[0mnew_key\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m'.'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-4-1c830259db70>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mnew_key\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'module.up'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0mnew_key\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m'.'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m             \u001b[0mnew_key\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m'.'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'down'"
      ]
     }
@@ -191,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +172,7 @@
        "torch.Size([1, 256, 64, 64])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
