--- a/test_image.ipynb
+++ b/test_image.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -68,11 +68,7 @@
       "which_model_netG: resnet_9blocks\n",
       "-------------- End ----------------\n",
       "CustomDatasetDataLoader\n",
-      "dataset [SingleImageDataset] was created\n",
-      "---------- Networks initialized -------------\n",
-      "[Network G] Total number of parameters : 11.378 M\n",
-      "-----------------------------------------------\n",
-      "model [TestModel] was created\n"
+      "dataset [SingleImageDataset] was created\n"
      ]
     }
    ],
@@ -97,64 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "down.1.weight\n",
-      "down.1.bias\n",
-      "down.4.weight\n",
-      "down.4.bias\n",
-      "down.7.weight\n",
-      "down.7.bias\n",
-      "down.10.conv_block.1.weight\n",
-      "down.10.conv_block.1.bias\n",
-      "down.10.conv_block.5.weight\n",
-      "down.10.conv_block.5.bias\n",
-      "down.11.conv_block.1.weight\n",
-      "down.11.conv_block.1.bias\n",
-      "down.11.conv_block.5.weight\n",
-      "down.11.conv_block.5.bias\n",
-      "down.12.conv_block.1.weight\n",
-      "down.12.conv_block.1.bias\n",
-      "down.12.conv_block.5.weight\n",
-      "down.12.conv_block.5.bias\n",
-      "down.13.conv_block.1.weight\n",
-      "down.13.conv_block.1.bias\n",
-      "down.13.conv_block.5.weight\n",
-      "down.13.conv_block.5.bias\n",
-      "down.14.conv_block.1.weight\n",
-      "down.14.conv_block.1.bias\n",
-      "down.14.conv_block.5.weight\n",
-      "down.14.conv_block.5.bias\n",
-      "down.15.conv_block.1.weight\n",
-      "down.15.conv_block.1.bias\n",
-      "down.15.conv_block.5.weight\n",
-      "down.15.conv_block.5.bias\n",
-      "down.16.conv_block.1.weight\n",
-      "down.16.conv_block.1.bias\n",
-      "down.16.conv_block.5.weight\n",
-      "down.16.conv_block.5.bias\n",
-      "down.17.conv_block.1.weight\n",
-      "down.17.conv_block.1.bias\n",
-      "down.17.conv_block.5.weight\n",
-      "down.17.conv_block.5.bias\n",
-      "down.18.conv_block.1.weight\n",
-      "down.18.conv_block.1.bias\n",
-      "down.18.conv_block.5.weight\n",
-      "down.18.conv_block.5.bias\n",
-      "up.0.weight\n",
-      "up.0.bias\n",
-      "up.3.weight\n",
-      "up.3.bias\n",
-      "up.7.weight\n",
-      "up.7.bias\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dick = torch.load('/home/toby/Documents/pytorch-CycleGAN-and-pix2pix/checkpoints/yosemite_cyclegan/latest_net_G_A.pth')\n",
     "\n",
@@ -164,21 +105,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: 'down'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-1c830259db70>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mnew_key\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'module.up'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0mnew_key\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m'.'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m             \u001b[0mnew_key\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m'.'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'down'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import OrderedDict\n",
     "new_dict = OrderedDict()\n",
@@ -198,64 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "module.down.1.weight\n",
-      "module.down.1.bias\n",
-      "module.down.4.weight\n",
-      "module.down.4.bias\n",
-      "module.down.7.weight\n",
-      "module.down.7.bias\n",
-      "module.down.10.conv_block.1.weight\n",
-      "module.down.10.conv_block.1.bias\n",
-      "module.down.10.conv_block.5.weight\n",
-      "module.down.10.conv_block.5.bias\n",
-      "module.down.11.conv_block.1.weight\n",
-      "module.down.11.conv_block.1.bias\n",
-      "module.down.11.conv_block.5.weight\n",
-      "module.down.11.conv_block.5.bias\n",
-      "module.down.12.conv_block.1.weight\n",
-      "module.down.12.conv_block.1.bias\n",
-      "module.down.12.conv_block.5.weight\n",
-      "module.down.12.conv_block.5.bias\n",
-      "module.down.13.conv_block.1.weight\n",
-      "module.down.13.conv_block.1.bias\n",
-      "module.down.13.conv_block.5.weight\n",
-      "module.down.13.conv_block.5.bias\n",
-      "module.down.14.conv_block.1.weight\n",
-      "module.down.14.conv_block.1.bias\n",
-      "module.down.14.conv_block.5.weight\n",
-      "module.down.14.conv_block.5.bias\n",
-      "module.down.15.conv_block.1.weight\n",
-      "module.down.15.conv_block.1.bias\n",
-      "module.down.15.conv_block.5.weight\n",
-      "module.down.15.conv_block.5.bias\n",
-      "module.down.16.conv_block.1.weight\n",
-      "module.down.16.conv_block.1.bias\n",
-      "module.down.16.conv_block.5.weight\n",
-      "module.down.16.conv_block.5.bias\n",
-      "module.down.17.conv_block.1.weight\n",
-      "module.down.17.conv_block.1.bias\n",
-      "module.down.17.conv_block.5.weight\n",
-      "module.down.17.conv_block.5.bias\n",
-      "module.down.18.conv_block.1.weight\n",
-      "module.down.18.conv_block.1.bias\n",
-      "module.down.18.conv_block.5.weight\n",
-      "module.down.18.conv_block.5.bias\n",
-      "module.up.0.weight\n",
-      "module.up.0.bias\n",
-      "module.up.3.weight\n",
-      "module.up.3.bias\n",
-      "module.up.7.weight\n",
-      "module.up.7.bias\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for k in model.netG.state_dict().keys():\n",
     "    print(k)\n",
@@ -264,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,20 +149,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([1, 3, 256, 256])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.netG.module.intermediate.shape\n",
     "data['A'].shape"
@@ -296,125 +159,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----------------------------------------------------------------\n",
-      "        Layer (type)               Output Shape         Param #\n",
-      "================================================================\n",
-      "   ReflectionPad2d-1          [-1, 3, 262, 262]               0\n",
-      "            Conv2d-2         [-1, 64, 256, 256]            9472\n",
-      "    InstanceNorm2d-3         [-1, 64, 256, 256]               0\n",
-      "              ReLU-4         [-1, 64, 256, 256]               0\n",
-      "            Conv2d-5        [-1, 128, 128, 128]           73856\n",
-      "    InstanceNorm2d-6        [-1, 128, 128, 128]               0\n",
-      "              ReLU-7        [-1, 128, 128, 128]               0\n",
-      "            Conv2d-8          [-1, 256, 64, 64]          295168\n",
-      "    InstanceNorm2d-9          [-1, 256, 64, 64]               0\n",
-      "             ReLU-10          [-1, 256, 64, 64]               0\n",
-      "  ReflectionPad2d-11          [-1, 256, 66, 66]               0\n",
-      "           Conv2d-12          [-1, 256, 64, 64]          590080\n",
-      "   InstanceNorm2d-13          [-1, 256, 64, 64]               0\n",
-      "             ReLU-14          [-1, 256, 64, 64]               0\n",
-      "  ReflectionPad2d-15          [-1, 256, 66, 66]               0\n",
-      "           Conv2d-16          [-1, 256, 64, 64]          590080\n",
-      "   InstanceNorm2d-17          [-1, 256, 64, 64]               0\n",
-      "      ResnetBlock-18          [-1, 256, 64, 64]               0\n",
-      "  ReflectionPad2d-19          [-1, 256, 66, 66]               0\n",
-      "           Conv2d-20          [-1, 256, 64, 64]          590080\n",
-      "   InstanceNorm2d-21          [-1, 256, 64, 64]               0\n",
-      "             ReLU-22          [-1, 256, 64, 64]               0\n",
-      "  ReflectionPad2d-23          [-1, 256, 66, 66]               0\n",
-      "           Conv2d-24          [-1, 256, 64, 64]          590080\n",
-      "   InstanceNorm2d-25          [-1, 256, 64, 64]               0\n",
-      "      ResnetBlock-26          [-1, 256, 64, 64]               0\n",
-      "  ReflectionPad2d-27          [-1, 256, 66, 66]               0\n",
-      "           Conv2d-28          [-1, 256, 64, 64]          590080\n",
-      "   InstanceNorm2d-29          [-1, 256, 64, 64]               0\n",
-      "             ReLU-30          [-1, 256, 64, 64]               0\n",
-      "  ReflectionPad2d-31          [-1, 256, 66, 66]               0\n",
-      "           Conv2d-32          [-1, 256, 64, 64]          590080\n",
-      "   InstanceNorm2d-33          [-1, 256, 64, 64]               0\n",
-      "      ResnetBlock-34          [-1, 256, 64, 64]               0\n",
-      "  ReflectionPad2d-35          [-1, 256, 66, 66]               0\n",
-      "           Conv2d-36          [-1, 256, 64, 64]          590080\n",
-      "   InstanceNorm2d-37          [-1, 256, 64, 64]               0\n",
-      "             ReLU-38          [-1, 256, 64, 64]               0\n",
-      "  ReflectionPad2d-39          [-1, 256, 66, 66]               0\n",
-      "           Conv2d-40          [-1, 256, 64, 64]          590080\n",
-      "   InstanceNorm2d-41          [-1, 256, 64, 64]               0\n",
-      "      ResnetBlock-42          [-1, 256, 64, 64]               0\n",
-      "  ReflectionPad2d-43          [-1, 256, 66, 66]               0\n",
-      "           Conv2d-44          [-1, 256, 64, 64]          590080\n",
-      "   InstanceNorm2d-45          [-1, 256, 64, 64]               0\n",
-      "             ReLU-46          [-1, 256, 64, 64]               0\n",
-      "  ReflectionPad2d-47          [-1, 256, 66, 66]               0\n",
-      "           Conv2d-48          [-1, 256, 64, 64]          590080\n",
-      "   InstanceNorm2d-49          [-1, 256, 64, 64]               0\n",
-      "      ResnetBlock-50          [-1, 256, 64, 64]               0\n",
-      "  ReflectionPad2d-51          [-1, 256, 66, 66]               0\n",
-      "           Conv2d-52          [-1, 256, 64, 64]          590080\n",
-      "   InstanceNorm2d-53          [-1, 256, 64, 64]               0\n",
-      "             ReLU-54          [-1, 256, 64, 64]               0\n",
-      "  ReflectionPad2d-55          [-1, 256, 66, 66]               0\n",
-      "           Conv2d-56          [-1, 256, 64, 64]          590080\n",
-      "   InstanceNorm2d-57          [-1, 256, 64, 64]               0\n",
-      "      ResnetBlock-58          [-1, 256, 64, 64]               0\n",
-      "  ReflectionPad2d-59          [-1, 256, 66, 66]               0\n",
-      "           Conv2d-60          [-1, 256, 64, 64]          590080\n",
-      "   InstanceNorm2d-61          [-1, 256, 64, 64]               0\n",
-      "             ReLU-62          [-1, 256, 64, 64]               0\n",
-      "  ReflectionPad2d-63          [-1, 256, 66, 66]               0\n",
-      "           Conv2d-64          [-1, 256, 64, 64]          590080\n",
-      "   InstanceNorm2d-65          [-1, 256, 64, 64]               0\n",
-      "      ResnetBlock-66          [-1, 256, 64, 64]               0\n",
-      "  ReflectionPad2d-67          [-1, 256, 66, 66]               0\n",
-      "           Conv2d-68          [-1, 256, 64, 64]          590080\n",
-      "   InstanceNorm2d-69          [-1, 256, 64, 64]               0\n",
-      "             ReLU-70          [-1, 256, 64, 64]               0\n",
-      "  ReflectionPad2d-71          [-1, 256, 66, 66]               0\n",
-      "           Conv2d-72          [-1, 256, 64, 64]          590080\n",
-      "   InstanceNorm2d-73          [-1, 256, 64, 64]               0\n",
-      "      ResnetBlock-74          [-1, 256, 64, 64]               0\n",
-      "  ReflectionPad2d-75          [-1, 256, 66, 66]               0\n",
-      "           Conv2d-76          [-1, 256, 64, 64]          590080\n",
-      "   InstanceNorm2d-77          [-1, 256, 64, 64]               0\n",
-      "             ReLU-78          [-1, 256, 64, 64]               0\n",
-      "  ReflectionPad2d-79          [-1, 256, 66, 66]               0\n",
-      "           Conv2d-80          [-1, 256, 64, 64]          590080\n",
-      "   InstanceNorm2d-81          [-1, 256, 64, 64]               0\n",
-      "      ResnetBlock-82          [-1, 256, 64, 64]               0\n",
-      "  ConvTranspose2d-83        [-1, 128, 128, 128]          295040\n",
-      "   InstanceNorm2d-84        [-1, 128, 128, 128]               0\n",
-      "             ReLU-85        [-1, 128, 128, 128]               0\n",
-      "  ConvTranspose2d-86         [-1, 64, 256, 256]           73792\n",
-      "   InstanceNorm2d-87         [-1, 64, 256, 256]               0\n",
-      "             ReLU-88         [-1, 64, 256, 256]               0\n",
-      "  ReflectionPad2d-89         [-1, 64, 262, 262]               0\n",
-      "           Conv2d-90          [-1, 3, 256, 256]            9411\n",
-      "             Tanh-91          [-1, 3, 256, 256]               0\n",
-      "  ResnetGenerator-92          [-1, 3, 256, 256]               0\n",
-      "================================================================\n",
-      "Total params: \n",
-      " 1.1378e+07\n",
-      "[torch.LongTensor of size ()]\n",
-      "\n",
-      "Trainable params: \n",
-      " 1.1378e+07\n",
-      "[torch.LongTensor of size ()]\n",
-      "\n",
-      "Non-trainable params: \n",
-      " 0\n",
-      "[torch.LongTensor of size ()]\n",
-      "\n",
-      "----------------------------------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "summary(model.netG, (3,256,256))"
    ]
