--- a/updated_unet.ipynb
+++ b/updated_unet.ipynb
@@ -108,80 +108,80 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model.model.0.weight\n",
-      "model.model.1.model.1.weight\n",
-      "model.model.1.model.2.weight\n",
-      "model.model.1.model.2.bias\n",
-      "model.model.1.model.2.running_mean\n",
-      "model.model.1.model.2.running_var\n",
-      "model.model.1.model.3.model.1.weight\n",
-      "model.model.1.model.3.model.2.weight\n",
-      "model.model.1.model.3.model.2.bias\n",
-      "model.model.1.model.3.model.2.running_mean\n",
-      "model.model.1.model.3.model.2.running_var\n",
-      "model.model.1.model.3.model.3.model.1.weight\n",
-      "model.model.1.model.3.model.3.model.2.weight\n",
-      "model.model.1.model.3.model.3.model.2.bias\n",
-      "model.model.1.model.3.model.3.model.2.running_mean\n",
-      "model.model.1.model.3.model.3.model.2.running_var\n",
-      "model.model.1.model.3.model.3.model.3.model.1.weight\n",
-      "model.model.1.model.3.model.3.model.3.model.2.weight\n",
-      "model.model.1.model.3.model.3.model.3.model.2.bias\n",
-      "model.model.1.model.3.model.3.model.3.model.2.running_mean\n",
-      "model.model.1.model.3.model.3.model.3.model.2.running_var\n",
-      "model.model.1.model.3.model.3.model.3.model.3.model.1.weight\n",
-      "model.model.1.model.3.model.3.model.3.model.3.model.2.weight\n",
-      "model.model.1.model.3.model.3.model.3.model.3.model.2.bias\n",
-      "model.model.1.model.3.model.3.model.3.model.3.model.2.running_mean\n",
-      "model.model.1.model.3.model.3.model.3.model.3.model.2.running_var\n",
-      "model.model.1.model.3.model.3.model.3.model.3.model.3.model.1.weight\n",
-      "model.model.1.model.3.model.3.model.3.model.3.model.3.model.2.weight\n",
-      "model.model.1.model.3.model.3.model.3.model.3.model.3.model.2.bias\n",
-      "model.model.1.model.3.model.3.model.3.model.3.model.3.model.2.running_mean\n",
-      "model.model.1.model.3.model.3.model.3.model.3.model.3.model.2.running_var\n",
-      "model.model.1.model.3.model.3.model.3.model.3.model.3.model.3.model.1.weight\n",
-      "model.model.1.model.3.model.3.model.3.model.3.model.3.model.3.model.3.weight\n",
-      "model.model.1.model.3.model.3.model.3.model.3.model.3.model.3.model.4.weight\n",
-      "model.model.1.model.3.model.3.model.3.model.3.model.3.model.3.model.4.bias\n",
-      "model.model.1.model.3.model.3.model.3.model.3.model.3.model.3.model.4.running_mean\n",
-      "model.model.1.model.3.model.3.model.3.model.3.model.3.model.3.model.4.running_var\n",
-      "model.model.1.model.3.model.3.model.3.model.3.model.3.model.5.weight\n",
-      "model.model.1.model.3.model.3.model.3.model.3.model.3.model.6.weight\n",
-      "model.model.1.model.3.model.3.model.3.model.3.model.3.model.6.bias\n",
-      "model.model.1.model.3.model.3.model.3.model.3.model.3.model.6.running_mean\n",
-      "model.model.1.model.3.model.3.model.3.model.3.model.3.model.6.running_var\n",
-      "model.model.1.model.3.model.3.model.3.model.3.model.5.weight\n",
-      "model.model.1.model.3.model.3.model.3.model.3.model.6.weight\n",
-      "model.model.1.model.3.model.3.model.3.model.3.model.6.bias\n",
-      "model.model.1.model.3.model.3.model.3.model.3.model.6.running_mean\n",
-      "model.model.1.model.3.model.3.model.3.model.3.model.6.running_var\n",
-      "model.model.1.model.3.model.3.model.3.model.5.weight\n",
-      "model.model.1.model.3.model.3.model.3.model.6.weight\n",
-      "model.model.1.model.3.model.3.model.3.model.6.bias\n",
-      "model.model.1.model.3.model.3.model.3.model.6.running_mean\n",
-      "model.model.1.model.3.model.3.model.3.model.6.running_var\n",
-      "model.model.1.model.3.model.3.model.5.weight\n",
-      "model.model.1.model.3.model.3.model.6.weight\n",
-      "model.model.1.model.3.model.3.model.6.bias\n",
-      "model.model.1.model.3.model.3.model.6.running_mean\n",
-      "model.model.1.model.3.model.3.model.6.running_var\n",
-      "model.model.1.model.3.model.5.weight\n",
-      "model.model.1.model.3.model.6.weight\n",
-      "model.model.1.model.3.model.6.bias\n",
-      "model.model.1.model.3.model.6.running_mean\n",
-      "model.model.1.model.3.model.6.running_var\n",
-      "model.model.1.model.5.weight\n",
-      "model.model.1.model.6.weight\n",
-      "model.model.1.model.6.bias\n",
-      "model.model.1.model.6.running_mean\n",
-      "model.model.1.model.6.running_var\n",
-      "model.model.3.weight\n",
-      "model.model.3.bias\n"
+      "model.model.7.model.6.model.5.model.4.model.3.model.2.model.1._down.1.weight\n",
+      "model.model.7.model.6.model.5.model.4.model.3.model.2.model.1._up.1.weight\n",
+      "model.model.7.model.6.model.5.model.4.model.3.model.2.model.1._up.2.weight\n",
+      "model.model.7.model.6.model.5.model.4.model.3.model.2.model.1._up.2.bias\n",
+      "model.model.7.model.6.model.5.model.4.model.3.model.2.model.1._up.2.running_mean\n",
+      "model.model.7.model.6.model.5.model.4.model.3.model.2.model.1._up.2.running_var\n",
+      "model.model.7.model.6.model.5.model.4.model.3.model.2._down.1.weight\n",
+      "model.model.7.model.6.model.5.model.4.model.3.model.2._down.2.weight\n",
+      "model.model.7.model.6.model.5.model.4.model.3.model.2._down.2.bias\n",
+      "model.model.7.model.6.model.5.model.4.model.3.model.2._down.2.running_mean\n",
+      "model.model.7.model.6.model.5.model.4.model.3.model.2._down.2.running_var\n",
+      "model.model.7.model.6.model.5.model.4.model.3.model.2._up.1.weight\n",
+      "model.model.7.model.6.model.5.model.4.model.3.model.2._up.2.weight\n",
+      "model.model.7.model.6.model.5.model.4.model.3.model.2._up.2.bias\n",
+      "model.model.7.model.6.model.5.model.4.model.3.model.2._up.2.running_mean\n",
+      "model.model.7.model.6.model.5.model.4.model.3.model.2._up.2.running_var\n",
+      "model.model.7.model.6.model.5.model.4.model.3._down.1.weight\n",
+      "model.model.7.model.6.model.5.model.4.model.3._down.2.weight\n",
+      "model.model.7.model.6.model.5.model.4.model.3._down.2.bias\n",
+      "model.model.7.model.6.model.5.model.4.model.3._down.2.running_mean\n",
+      "model.model.7.model.6.model.5.model.4.model.3._down.2.running_var\n",
+      "model.model.7.model.6.model.5.model.4.model.3._up.1.weight\n",
+      "model.model.7.model.6.model.5.model.4.model.3._up.2.weight\n",
+      "model.model.7.model.6.model.5.model.4.model.3._up.2.bias\n",
+      "model.model.7.model.6.model.5.model.4.model.3._up.2.running_mean\n",
+      "model.model.7.model.6.model.5.model.4.model.3._up.2.running_var\n",
+      "model.model.7.model.6.model.5.model.4._down.1.weight\n",
+      "model.model.7.model.6.model.5.model.4._down.2.weight\n",
+      "model.model.7.model.6.model.5.model.4._down.2.bias\n",
+      "model.model.7.model.6.model.5.model.4._down.2.running_mean\n",
+      "model.model.7.model.6.model.5.model.4._down.2.running_var\n",
+      "model.model.7.model.6.model.5.model.4._up.1.weight\n",
+      "model.model.7.model.6.model.5.model.4._up.2.weight\n",
+      "model.model.7.model.6.model.5.model.4._up.2.bias\n",
+      "model.model.7.model.6.model.5.model.4._up.2.running_mean\n",
+      "model.model.7.model.6.model.5.model.4._up.2.running_var\n",
+      "model.model.7.model.6.model.5._down.1.weight\n",
+      "model.model.7.model.6.model.5._down.2.weight\n",
+      "model.model.7.model.6.model.5._down.2.bias\n",
+      "model.model.7.model.6.model.5._down.2.running_mean\n",
+      "model.model.7.model.6.model.5._down.2.running_var\n",
+      "model.model.7.model.6.model.5._up.1.weight\n",
+      "model.model.7.model.6.model.5._up.2.weight\n",
+      "model.model.7.model.6.model.5._up.2.bias\n",
+      "model.model.7.model.6.model.5._up.2.running_mean\n",
+      "model.model.7.model.6.model.5._up.2.running_var\n",
+      "model.model.7.model.6._down.1.weight\n",
+      "model.model.7.model.6._down.2.weight\n",
+      "model.model.7.model.6._down.2.bias\n",
+      "model.model.7.model.6._down.2.running_mean\n",
+      "model.model.7.model.6._down.2.running_var\n",
+      "model.model.7.model.6._up.1.weight\n",
+      "model.model.7.model.6._up.2.weight\n",
+      "model.model.7.model.6._up.2.bias\n",
+      "model.model.7.model.6._up.2.running_mean\n",
+      "model.model.7.model.6._up.2.running_var\n",
+      "model.model.7._down.1.weight\n",
+      "model.model.7._down.2.weight\n",
+      "model.model.7._down.2.bias\n",
+      "model.model.7._down.2.running_mean\n",
+      "model.model.7._down.2.running_var\n",
+      "model.model.7._up.1.weight\n",
+      "model.model.7._up.2.weight\n",
+      "model.model.7._up.2.bias\n",
+      "model.model.7._up.2.running_mean\n",
+      "model.model.7._up.2.running_var\n",
+      "model._down.0.weight\n",
+      "model._up.1.weight\n",
+      "model._up.1.bias\n"
      ]
     }
    ],
    "source": [
-    "dick = torch.load('/home/toby/Documents/pytorch-CycleGAN-and-pix2pix/checkpoints/edges2shoes_pretrained/latest_net_G.pth')\n",
+    "dick = torch.load('/home/toby/Documents/pytorch-CycleGAN-and-pix2pix/checkpoints/edges2shoes_2nd/latest_net_G.pth')\n",
     "\n",
     "for key, value in dick.items():\n",
     "    print(key)"
